[package]
name = "kcp-rust"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
smol = "1.3.0"
env_logger = "*"

[dependencies]
log = "0.4.20"
pin-project = "1.1.2"
smol = { version = "1.3.0", optional = true }
tokio = {version = "1.34.0", optional = true, features = ["full"]}

[features]
default = []
multi_thread = []
runtime_smol = ["smol"]
runtime_tokio = ["tokio"]